--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "connected-react-router": "^6.4.0",
     "formik": "^1.5.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
