--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "bulma": "^0.7.4",
     "connected-react-router": "^6.4.0",
     "formik": "^1.5.1",
     "react": "^16.8.4",
@@ -29,6 +30,7 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
+    "styled-components": "^4.2.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
