--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bulma": "^0.7.4",
     "connected-react-router": "^6.4.0",
     "formik": "^1.5.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.4",
