--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.8.4",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.4",
+    "react-formik-ui": "^2.3.17",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
