--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "bulma": "^0.7.4",
     "connected-react-router": "^6.4.0",
     "formik": "^1.5.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.4",
     "react-formik-ui": "^2.3.17",
+    "react-moment": "^0.9.2",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
