--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connected-react-router": "^6.4.0",
     "formik": "^1.5.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-bulma-components": "^2.3.0",
